objects/FACULTY_LIST__c.object
<CustomObject>
    <label>FACULTY LIST</label>
    <nameField>
        <label>FACULTY LIST Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FACULTY LISTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>AGE__c</fullName>
        <label>AGE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRANCH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BRANCH</label>
        <referenceTo>BRANCH__c</referenceTo>
        <relationshipLabel>FACULTY LISTS</relationshipLabel>
        <relationshipName>FACULTY_LISTS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QUALIFICATION__c</fullName>
        <label>QUALIFICATION</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B.TECH</fullName>
                </value>
                <value>
                    <fullName>M.TECH</fullName>
                </value>
                <value>
                    <fullName>DEGREE</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERSONAL_GMAIL_ID__c</fullName>
        <label>PERSONAL GMAIL-ID</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OTHER_QUALIFICATIONS__c</fullName>
        <inlineHelpText>Please write your futher qualifications</inlineHelpText>
        <label>OTHER QUALIFICATIONS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>